src/test/ui/intrinsics/intrinsic-raw_eq-const-padding.stderr
error[E0080]: evaluation of constant value failed
  --> $DIR/intrinsic-raw_eq-const-padding.rs:6:5
   |
LL |     std::intrinsics::raw_eq(&(1_u8, 2_u16), &(1_u8, 2_u16))
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ reading 4 bytes of memory starting at alloc3, but 1 byte is uninitialized starting at alloc3+0x1, and this operation requires initialized memory

error: aborting due to previous error

For more information about this error, try `rustc --explain E0080`.
